Blissify: Expand our lockscreeen date style options
- Use the same format that we have for status bar date style

Change-Id: I6d613fd9a244c38ce1ef83f68b6c47ecc2af3480

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1194,9 +1194,24 @@
     <!-- Lockscreen date styles -->
     <string-array name="lockscreen_date_format_entries" translatable="false">
         <item>@string/lockscreen_date_format_default</item>
-        <item>@string/lockscreen_date_format_date_wnumber</item>
-        <item>@string/lockscreen_date_format_date</item>
-        <item>@string/lockscreen_date_format_day_of_month</item>
+        <item>dd/MM/yy</item>
+        <item>MM/dd/yy</item>
+        <item>yyyy-MM-dd</item>
+        <item>yyyy-dd-MM</item>
+        <item>dd-MM-yyyy</item>
+        <item>MM-dd-yyyy</item>
+        <item>MMM dd</item>
+        <item>MMM dd, yyyy</item>
+        <item>MMMM dd, yyyy</item>
+        <item>EEE</item>
+        <item>EEE dd</item>
+        <item>EEE dd/MM</item>
+        <item>EEE MM/dd</item>
+        <item>EEE dd MMM</item>
+        <item>EEE MMM dd</item>
+        <item>EEE MMMM dd</item>
+        <item>EEEE dd/MM</item>
+        <item>EEEE MM/dd</item>
     </string-array>
 
     <string-array name="lockscreen_date_format_values" translatable="false">
@@ -1204,6 +1219,21 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
     </string-array>
 
 </resources>
