--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1194,9 +1194,24 @@
     <!-- Lockscreen date styles -->
     <string-array name="lockscreen_date_format_entries" translatable="false">
         <item>@string/lockscreen_date_format_default</item>
-        <item>@string/lockscreen_date_format_date_wnumber</item>
-        <item>@string/lockscreen_date_format_date</item>
-        <item>@string/lockscreen_date_format_day_of_month</item>
+        <item>@string/lockdate_opt_1</item>
+        <item>@string/lockdate_opt_2</item>
+        <item>@string/lockdate_opt_3</item>
+        <item>@string/lockdate_opt_4</item>
+        <item>@string/lockdate_opt_5</item>
+        <item>@string/lockdate_opt_6</item>
+        <item>@string/lockdate_opt_7</item>
+        <item>@string/lockdate_opt_8</item>
+        <item>@string/lockdate_opt_9</item>
+        <item>@string/lockdate_opt_10</item>
+        <item>@string/lockdate_opt_11</item>
+        <item>@string/lockdate_opt_12</item>
+        <item>@string/lockdate_opt_13</item>
+        <item>@string/lockdate_opt_14</item>
+        <item>@string/lockdate_opt_15</item>
+        <item>@string/lockdate_opt_16</item>
+        <item>@string/lockdate_opt_17</item>
+        <item>@string/lockdate_opt_18</item>
     </string-array>
 
     <string-array name="lockscreen_date_format_values" translatable="false">
@@ -1204,6 +1219,21 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
     </string-array>
 
 </resources>
