Blissify: Add system animation category
Change-Id: Id55eb6981244ec59e19bb67ce29f36032072b8c2
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -18,6 +18,10 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/blissify_animation_title" >
 
+    <PreferenceCategory
+        android:key="system_animations"
+        android:title="@string/system_animation_category"/>
+
         <ListPreference
             android:key="activity_open"
             android:title="@string/activity_open_title" />
