Blissify: Categorize Network traffic
Change-Id: I5d1ef35066eb55b3da074b4e1fd115c6d0049973
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -26,7 +26,8 @@
     <string name="system_animation_category">System</string>
     <string name="misc_animation_title">Misc</string>
     <string name="toast_animation_category">Toast Animations</string>
-    
+    <string name="network_traffic_category">Network Traffic</string>
+
     <!-- AOKP custom system animations -->
     <string name="animation_title">Animations</string>  
     <string name="system_animation_title">System animations</string>
