Blissify: Add Buttons Category
Change-Id: I64ba675cedfb5c5ff1e0f08a36f419942c499bd3
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -30,4 +30,10 @@
           android:title="@string/blissify_animation_title"
           android:fragment="com.blissroms.blissify.fragments.animation.Animation"/>
 
+      <!-- Buttons -->
+      <Preference
+          android:key="buttons_category"
+          android:title="@string/blissify_buttons_title"
+          android:fragment="com.blissroms.blissify.fragments.buttons.Buttons"/>
+
 </PreferenceScreen>
