--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -23,6 +23,7 @@
     <!-- Categories -->
     <string name="blissify_statusbar_title">StatusBar</string>
     <string name="blissify_animation_title">Animations</string>
+    <string name="blissify_buttons_title">Buttons</string>
     <string name="system_animation_category">System</string>
     <string name="misc_animation_title">Misc</string>
     <string name="toast_animation_category">Toast Animations</string>
