ConfigCenter: HeadsUp blacklists (2/2)
* blissify : add notifications category

Change-Id: I5df645cd9d8c38e07e737f65f7d608fcf48c22b4

--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -60,6 +60,12 @@
           android:fragment="com.blissroms.blissify.fragments.gestures.Gestures"
           android:icon="@drawable/ic_blissify_gestures"/>
 
+      <Preference
+          android:key="notifications_category"
+          android:title="@string/blissify_notifications_title"
+          android:fragment="com.blissroms.blissify.fragments.notifications.Notifications"
+          android:icon="@drawable/ic_settings_notifications"/>
+
       <!-- Misc -->
       <Preference
           android:key="misc_category"
