--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -28,6 +28,7 @@
     <string name="blissify_misc_title">Misc</string>
     <string name="blissify_lockscreen_title">Lockscreen</string>
     <string name="blissify_gestures_title">Gestures</string>
+    <string name="blissify_notifications_title">Notifications</string>
     <string name="system_animation_category">System</string>
     <string name="misc_animation_title">Misc</string>
     <string name="toast_animation_category">Toast Animations</string>
@@ -515,6 +516,19 @@
     <string name="aggressive_standby_summary">Restrict apps from running in the background</string>
     <string name="aggressive_battery_saver_title">Auto-enable on battery saver</string>
     <string name="aggressive_battery_saver_summary">Enable Aggressive Battery automatically when using battery saver</string>
+
+    <!-- Heads up -->
+    <string name="notification_stat">Statusbar</string>
+    <string name="heads_up_notifications">Heads Up</string>
+    <string name="heads_up_notifications_summary">Pop up statusbar notifications</string>
+    <string name="add_heads_up_package">Add app</string>
+    <string name="heads_up_stoplist_title">Stoplist</string>
+    <string name="add_heads_up_stoplist_summary">Disable heads up in these applications</string>
+    <string name="heads_up_blacklist_title">Blacklist</string>
+    <string name="add_heads_up_blacklist_summary">Disable heads up for these applications</string>
+    <string name="profile_choose_app">Choose app</string>
+    <string name="dialog_delete_title">Delete</string>
+    <string name="dialog_delete_message">Remove selected item?</string>
 
 </resources>
 
