--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -18,5 +18,12 @@
     android:key="notifications_category"
     android:title="@string/blissify_notifications_title">
 
+    <com.bliss.support.preferences.GlobalSettingMasterSwitchPreference 
+        android:key="heads_up_notifications_enabled"
+        android:fragment="com.blissroms.blissify.fragments.notifications.HeadsUp"
+        android:title="@string/heads_up_notifications"
+        android:summary="@string/heads_up_notifications_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
 
