Blissify: Add header for Statusbar Category
Big Thanks to @ROGERdotT for Header!

Change-Id: I3b271554dfd9c4b55c3ce5b8c237249d9ca865f2
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -19,6 +19,11 @@
     xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
     android:title="@string/blissify_statusbar_title" >
 
+    <!-- Bliss Header -->
+    <Preference 
+        android:key="bliss_header"
+        android:layout="@layout/statusbar_header" />
+
     <lineageos.preference.LineageSystemSettingListPreference
         android:key="qs_quick_pulldown"
         android:title="@string/status_bar_quick_qs_pulldown_title"
