Blissify: Add header for Animation Category
Big Thanks to @ROGERdotT for Header!

Change-Id: I5636ebdf87859056fe6559187b146ff4952503a1
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -18,6 +18,11 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/blissify_animation_title" >
 
+    <!-- Bliss Header -->
+    <Preference 
+        android:key="bliss_header"
+        android:layout="@layout/animation_header" />
+
     <PreferenceCategory
         android:key="system_animations"
         android:title="@string/system_animation_category"/>
