Blissify: Add header for Buttons Category
Big Thanks to @ROGERdotT for Header!

Change-Id: Ia127c0a8d9bc175bd81d104f9d1ca08ef0c1dbda
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -21,6 +21,11 @@
     android:key="buttons_settings"
     android:title="@string/blissify_buttons_title">
 
+    <!-- Bliss Header -->
+    <Preference 
+        android:key="bliss_header"
+        android:layout="@layout/buttons_header" />
+
     <SwitchPreference
         android:key="disable_nav_keys"
         android:title="@string/disable_navkeys_title"
