Blissify: Smart Pixels [2/2]
Change-Id: I143232d73bdc7d79eace779db484cb837cabc7f4

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -69,4 +69,11 @@
 
     </PreferenceCategory>
 
+    <com.bliss.support.preferences.SystemSettingMasterSwitchPreference
+        android:key="smart_pixels_enable"
+        android:fragment="com.blissroms.blissify.fragments.misc.SmartPixels"
+        android:title="@string/smart_pixels_title"
+        android:summary="@string/smart_pixels_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
