--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -26,17 +26,22 @@
         android:key="bliss_header"
         android:layout="@layout/buttons_header" />
 
-    <SwitchPreference
-        android:key="disable_nav_keys"
-        android:title="@string/disable_navkeys_title"
-        android:summary="@string/disable_navkeys_summary"
-        android:defaultValue="false" />
+    <com.bliss.support.preferences.SecureSettingSwitchPreference
+        android:key="hardware_keys_disable"
+        android:title="@string/hwkeys_disabled_title"
+        android:summary="@string/hwkeys_disabled_summary" />
 
     <com.blissroms.blissify.fragments.buttons.ButtonBacklightBrightness
         android:key="button_backlight"
         android:title="@string/button_backlight_title"
         android:dialogTitle="@string/button_backlight_title"
         android:persistent="false" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="anbi_enabled"
+        android:title="@string/anbi_title"
+        android:summary="@string/anbi_summary"
+        android:defaultValue="false" />
 
     <PreferenceCategory
         android:key="navigation_bar_arrow_keys"
