--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1153,4 +1153,12 @@
     <string name="lock_date_font_size_title">Date font size</string>
     <string name="clock_font_size_title">Clock font size</string>
 
+    <!-- Disable HW keys -->
+    <string name="hwkeys_disabled_title">Disable HW keys</string>
+    <string name="hwkeys_disabled_summary">Enabling this will disable hardware keys for navigation</string>
+
+    <!-- ANBI -->
+    <string name="anbi_title">Accidental touch</string>
+    <string name="anbi_summary">Prevent interaction with navigation buttons while the screen is being touched</string>
+
 </resources>
