Buttons: Move Advanced Restart switch to Blissify [2/2]
Change-Id: I91191195891d9959f916515f1c3205673e35e46b
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -21,6 +21,12 @@
     android:key="buttons_settings"
     android:title="@string/blissify_buttons_title">
 
+    <lineageos.preference.LineageSecureSettingSwitchPreference
+        android:key="advanced_reboot"
+        android:title="@string/advanced_reboot_title"
+        android:summary="@string/advanced_reboot_summary"
+        android:defaultValue="false" />
+
     <SwitchPreference
         android:key="disable_nav_keys"
         android:title="@string/disable_navkeys_title"
