Blissify: Add header for Lockscreen Category
Big Thanks to @ROGERdotT for Header!

Change-Id: Ibdc8b031178cf2126d00877edc7bc3037e0c2e4c
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -17,4 +17,9 @@
     android:key="lockscreen_settings"
     android:title="@string/blissify_lockscreen_title">
 
+    <!-- Bliss Header -->
+    <Preference 
+        android:key="bliss_header"
+        android:layout="@layout/lockscreen_header" />
+
 </PreferenceScreen>
