Blissify: Add LockscreenCharging (3/3)
Change-Id: Iee85b45af0126e1301ef30572f95bcf5513a7a67
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -23,4 +23,10 @@
         android:key="bliss_header"
         android:layout="@layout/lockscreen_header" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_battery_info"
+        android:title="@string/lockscreen_battery_info_title"
+        android:summary="@string/lockscreen_battery_info_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
