Blissify: Add Gestures category
Change-Id: I165e7d2a5d02839fdaceb6bb497bfa9f3dd08d38
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -26,6 +26,7 @@
     <string name="blissify_buttons_title">Buttons</string>
     <string name="blissify_misc_title">Misc</string>
     <string name="blissify_lockscreen_title">Lockscreen</string>
+    <string name="blissify_gestures_title">Gestures</string>
     <string name="system_animation_category">System</string>
     <string name="misc_animation_title">Misc</string>
     <string name="toast_animation_category">Toast Animations</string>
