Blissify: Add header for Gestures Category
Big Thanks to @ROGERdotT for Header!

Change-Id: I8c35ec8474dfa946da10ce26590e3c00749452b3
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_gestures.xml
+++ b/res/xml/blissify_gestures.xml
@@ -18,4 +18,9 @@
     android:key="gestures_settings"
     android:title="@string/blissify_gestures_title">
 
+    <!-- Bliss Header -->
+    <Preference 
+        android:key="bliss_header"
+        android:layout="@layout/gestures_header" />
+
 </PreferenceScreen>
