--- a/res/xml/blissify_gestures.xml
+++ b/res/xml/blissify_gestures.xml
@@ -23,4 +23,11 @@
         android:key="bliss_header"
         android:layout="@layout/gestures_header" />
 
+    <!-- Double tap to sleep -->
+    <lineageos.preference.LineageSystemSettingSwitchPreference
+        android:key="double_tap_sleep_gesture"
+        android:title="@string/status_bar_double_tap_to_sleep_title"
+        android:summary="@string/status_bar_double_tap_to_sleep_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
