Blissify: Move Tap to wake and Lift to Wake to Blissify [2/2]
Change-Id: I4f586994f435e9fb5d630dc17af6d7cd28b0935d
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_gestures.xml
+++ b/res/xml/blissify_gestures.xml
@@ -30,4 +30,13 @@
         android:summary="@string/status_bar_double_tap_to_sleep_summary"
         android:defaultValue="true" />
 
+    <SwitchPreference
+        android:key="lift_to_wake"
+        android:title="@string/lift_to_wake_title" />
+
+    <SwitchPreference
+        android:key="tap_to_wake"
+        android:title="@string/tap_to_wake"
+        android:summary="@string/tap_to_wake_summary" />
+
 </PreferenceScreen>
