Misc: Move Dashboard suggestions to Blissify [2/2]
Change-Id: I587fa29af917566b65373ed3c1382843a0d7772a
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -23,4 +23,11 @@
         android:summary="@string/fprint_sucess_vib_summary"
         android:persistent="false" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="enable_suggestions"
+        android:title="@string/dashboard_suggestions_title"
+        android:summaryOn="@string/summary_dashboard_suggestions_enabled"
+        android:summaryOff="@string/summary_dashboard_suggestions_disabled"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
