Lockscreen: Move Wake when plugged to Blissify
Change-Id: I8f4fd2cb15d0484dc217918b182642a68aa610f4
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -28,4 +28,10 @@
         android:summary="@string/lockscreen_battery_info_summary"
         android:defaultValue="true" />
 
+    <lineageos.preference.LineageGlobalSettingSwitchPreference
+        android:key="wake_when_plugged_or_unplugged"
+        android:title="@string/wake_when_plugged_or_unplugged_title"
+        android:summary="@string/wake_when_plugged_or_unplugged_summary"
+        android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />
+
 </PreferenceScreen>
