--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -14,6 +14,7 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
     android:key="lockscreen_settings"
     android:title="@string/blissify_lockscreen_title">
 
@@ -33,5 +34,13 @@
         android:title="@string/wake_when_plugged_or_unplugged_title"
         android:summary="@string/wake_when_plugged_or_unplugged_summary"
         android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />
+
+    <!-- Prevent accidental wake-up -->
+    <lineageos.preference.LineageSystemSettingSwitchPreference
+        android:key="proximity_on_wake"
+        android:title="@string/proximity_wake_title"
+        android:summary="@string/proximity_wake_summary"
+        android:defaultValue="false"
+        lineage:requiresConfig="@*lineageos.platform:bool/config_proximityCheckOnWake" />
 
 </PreferenceScreen>
