Statusbar: Add Advanced system icons Category
Change-Id: I2bd8cff76d53e76f97686458534019b38f404cec

Signed-off-by: rohan <purohit.rohan@gmail.com>
Change-Id: Ie7d50ec5c3279597181a98d5c79d74fb62f07cab

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -352,5 +352,8 @@
     <string name="toast_icon_title">Toast icon</string>
     <string name="toast_icon_summary">Display icon of activity that generates toast message</string>
 
+    <!--statusbar advanced system icons -->
+    <string name="statusbar_advanced_icons">Advanced System Icons</string>
+
 </resources>
 
