Statusbar: Add Breathing Notification Category
Change-Id: I2bd8cff76d53e76f97686458534019b38f404cec
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -321,5 +321,8 @@
     <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
     <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
 
+    <!-- Breathing Notifications -->
+    <string name="statusbar_breathing_title">Breathing Notifications</string>
+
 </resources>
 
