Blissify: add Quick settings category
* move haptic feedback

Change-Id: I5c16ef694c238bb78fbf6d45a200e19bef51a3f5

--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -25,6 +25,11 @@
           android:fragment="com.blissroms.blissify.fragments.statusbar.StatusBar"
           android:icon="@drawable/ic_blissify_statusbar"/>
 
+      <Preference
+          android:key="qs_category"
+          android:title="@string/blissify_qs_title"
+          android:fragment="com.blissroms.blissify.fragments.qs.QuickSettings" />
+
       <!-- Animation -->
       <Preference
           android:key="animation_category"
