--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -22,6 +22,7 @@
 
     <!-- Categories -->
     <string name="blissify_statusbar_title">StatusBar</string>
+    <string name="blissify_qs_title">Quick Settings</string>
     <string name="blissify_animation_title">Animations</string>
     <string name="blissify_buttons_title">Buttons</string>
     <string name="blissify_misc_title">Misc</string>
