Blissify: Add settings for rounded corners
crdroid: Re-enable rounded corner customization

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I5dc6ffd3b0ad290930f0aac9a9b39e27f6eb5c1a
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -17,6 +17,13 @@
     android:key="misc_settings"
     android:title="@string/blissify_misc_title">
 
+    <!-- Rounded Corners -->
+    <PreferenceScreen
+        android:key="rounded_corners"
+        android:title="@string/corners_title"
+        android:summary="@string/corners_summary"
+        android:fragment="com.blissroms.blissify.fragments.misc.RoundedCorners" />
+
     <SwitchPreference
         android:key="fingerprint_success_vib"
         android:title="@string/fprint_sucess_vib_title"
