Blissify: move dashboard conditions from settings
missed here https://github.com/BlissRoms/platform_packages_apps_Settings/commit/5b96ae52d1a2fe1e1b239366f707a220884107c7

Change-Id: I71ce593da3e68ac8afe03cda94a78f53069002b3

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -30,6 +30,13 @@
         android:summaryOff="@string/summary_dashboard_suggestions_disabled"
         android:defaultValue="true" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="enable_conditions"
+        android:title="@string/dashboard_conditions_title"
+        android:summaryOn="@string/summary_dashboard_conditions_enabled"
+        android:summaryOff="@string/summary_dashboard_conditions_disabled"
+        android:defaultValue="true" />
+
     <!-- Show CPU Info overlay -->
     <SwitchPreference
         android:key="show_cpu_info"
