--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -25,6 +25,7 @@
           android:fragment="com.blissroms.blissify.fragments.statusbar.StatusBar"
           android:icon="@drawable/ic_blissify_statusbar"/>
 
+      <!-- Quick Settings -->
       <Preference
           android:key="qs_category"
           android:title="@string/blissify_qs_title"
