--- a/res/xml/buttons_op_gesture.xml
+++ b/res/xml/buttons_op_gesture.xml
@@ -37,9 +37,15 @@
         android:persistent="false"
         bliss:unitsRight="@string/unit_msec" />
 
-    <Preference
-        android:key="gestures_usage"
-        android:selectable="false"
-        android:summary="@string/gesture_settings_info" />
+    <com.bliss.support.preferences.SystemSettingIntListPreference
+        android:key="bottom_gesture_navigation_feedback_duration"
+        android:entries="@array/bottom_gestures_feedback_time_labels"
+        android:entryValues="@array/bottom_gestures_feedback_time"
+        android:title="@string/bottom_gestures_feedback_duration_title"
+        android:summary="%s"
+        android:defaultValue="50" />
+
+    <com.android.settingslib.widget.FooterPreference
+        android:title="@string/gesture_settings_info" />
 
 </PreferenceScreen>
