--- a/res/xml/buttons_op_gesture.xml
+++ b/res/xml/buttons_op_gesture.xml
@@ -28,6 +28,16 @@
         bliss:unitsRight="@string/unit_px" />
 
     <com.bliss.support.preferences.SeekBarPreferenceCham
+        android:key="gesture_swipe_start"
+        android:title="@string/gesture_swipe_start_title"
+        android:summary="@string/gesture_swipe_start_summary"
+        android:max="50"
+        android:min="20"
+        android:persistent="false"
+        android:defaultValue="@*android:integer/config_navgestureswipestart"
+        bliss:unitsRight="@string/unit_px" />
+
+    <com.bliss.support.preferences.SeekBarPreferenceCham
         android:key="gesture_swipe_timeout"
         android:title="@string/gesture_action_timeout_title"
         android:summary="@string/gesture_action_timeout_summary"
@@ -35,7 +45,7 @@
         android:min="100"
         android:defaultValue="@*android:integer/config_navgestureswipetimout"
         android:persistent="false"
-        bliss:unitsRight="@string/unit_msec" />
+        bliss:unitsRight="@string/unit_milliseconds" />
 
     <com.bliss.support.preferences.SystemSettingIntListPreference
         android:key="bottom_gesture_navigation_feedback_duration"
