--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -444,5 +444,14 @@
     <string name="lockscreen_media_blur_title">Media artwork blur level</string>
     <string name="lockscreen_media_blur_summary">Control the blur amount of media artwork</string>
 
+    <!-- Aggressive battery -->
+    <string name="aggressive_battery_title">Aggressive Battery</string>
+    <string name="aggressive_idle_title">Aggressive Idle</string>
+    <string name="aggressive_idle_summary">Enter device idle more frequently and wake up less</string>
+    <string name="aggressive_standby_title">Aggressive Standby</string>
+    <string name="aggressive_standby_summary">Restrict apps from running in the background</string>
+    <string name="aggressive_battery_saver_title">Auto-enable on battery saver</string>
+    <string name="aggressive_battery_saver_summary">Enable Aggressive Battery automatically when using battery saver</string>
+
 </resources>
 
