--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -105,4 +105,30 @@
         android:defaultValue="false" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="aggressive_battery"
+        android:title="@string/aggressive_battery_title">
+
+    <com.bliss.support.preferences.GlobalSettingSwitchPreference
+            android:key="aggressive_idle_enabled"
+            android:title="@string/aggressive_idle_title"
+            android:summary="@string/aggressive_idle_summary"
+            android:defaultValue="false"
+            android:dependency="aggressive_battery_saver" />
+
+    <com.bliss.support.preferences.GlobalSettingSwitchPreference
+            android:key="aggressive_standby_enabled"
+            android:title="@string/aggressive_standby_title"
+            android:summary="@string/aggressive_standby_summary"
+            android:defaultValue="false"
+            android:dependency="aggressive_battery_saver" />
+
+    <com.bliss.support.preferences.GlobalSettingSwitchPreference
+            android:key="aggressive_battery_saver"
+            android:title="@string/aggressive_battery_saver_title"
+            android:summary="@string/aggressive_battery_saver_summary"
+            android:defaultValue="true"
+            android:disableDependentsState="true" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
