--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -55,6 +55,16 @@
         android:key="toast_icon" 
         android:title="@string/toast_icon_title" 
         android:summary="@string/toast_icon_summary" 
+        android:defaultValue="true" />
+
+    <PreferenceCategory
+        android:key="notification_messages"
+        android:title="@string/notification_messages">
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="enable_fc_notifications" 
+        android:title="@string/enable_fc_notifications_title" 
+        android:summary="@string/enable_fc_notifications_summary" 
         android:defaultValue="true" /> 
 
 </PreferenceScreen>
