Blissify: fix volte icon key
Change-Id: Ia8904849941bd40dcda94e2bd60b0f3a3d640822

--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -16,7 +16,7 @@
     android:title="@string/statusbar_advanced_icons">
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="volte_icon"
+            android:key="show_volte_icon"
             android:icon="@drawable/ic_volte"
             android:title="@string/volte_icon_title"
             android:summary="@string/volte_icon_summary"
