--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -44,6 +44,12 @@
         android:defaultValue="false"
         lineage:requiresConfig="@*lineageos.platform:bool/config_proximityCheckOnWake" />
 
+    <Preference
+        android:key="lockscreen_visualizer"
+        android:title="@string/music_visualizer_title"
+        android:summary="@string/music_visualizer_summary"
+        android:fragment="com.blissroms.blissify.fragments.lockscreen.LockScreenVisualizer" />
+
     <lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="lockscreen_media_metadata"
         android:title="@string/lockscreen_media_art_title"
