--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -116,6 +116,13 @@
         android:title="@string/lockscreen_visualizer_title"
         android:defaultValue="true" />
 
+    <Preference
+        android:key="lockscreen_visualizer"
+        android:icon="@drawable/ic_music_visualizer"
+        android:title="@string/music_visualizer_title"
+        android:summary="@string/music_visualizer_summary"
+        android:fragment="com.blissroms.blissify.fragments.lockscreen.LockScreenVisualizer" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
