--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -63,6 +63,7 @@
 
         <ListPreference
             android:key="navigation_home_double_tap"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/navigation_bar_home_double_tap_title"
             android:title="@string/navigation_bar_home_double_tap_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -124,6 +125,7 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="home_wake_screen"
+            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="true" />
 
@@ -135,6 +137,7 @@
 
         <ListPreference
             android:key="hardware_keys_home_long_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -143,6 +146,7 @@
 
         <ListPreference
             android:key="hardware_keys_home_double_tap"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_double_tap_title"
             android:title="@string/hardware_keys_double_tap_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -157,11 +161,13 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="back_wake_screen"
+            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_back_long_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -175,11 +181,13 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="menu_wake_screen"
+            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_menu_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -188,6 +196,7 @@
 
         <ListPreference
             android:key="hardware_keys_menu_long_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -202,11 +211,13 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="assist_wake_screen"
+            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_assist_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -215,6 +226,7 @@
 
         <ListPreference
             android:key="hardware_keys_assist_long_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -229,11 +241,13 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="app_switch_wake_screen"
+            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_app_switch_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -242,6 +256,7 @@
 
         <ListPreference
             android:key="hardware_keys_app_switch_long_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -256,6 +271,7 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="camera_wake_screen"
+            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
@@ -285,6 +301,7 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volume_wake_screen"
+            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
