--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -21,6 +21,7 @@
     <com.bliss.support.preferences.GlobalSettingMasterSwitchPreference 
         android:key="heads_up_notifications_enabled"
         android:fragment="com.blissroms.blissify.fragments.notifications.HeadsUp"
+        android:icon="@drawable/ic_headsup"
         android:title="@string/heads_up_notifications"
         android:summary="@string/heads_up_notifications_summary"
         android:defaultValue="true" />
